<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.2</version>
        <relativePath/>
    </parent>

    <packaging>pom</packaging>

    <modules>
        <module>palikka-core</module>
        <module>palikka-users-api</module>
        <module>palikka-game-api</module>
        <module>palikka-mock-file-server</module>
    </modules>

    <groupId>fi.jannetahkola.palikka</groupId>
    <artifactId>palikka-api</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <name>palikka-api</name>
    <description>Palikka API root</description>

    <properties>
        <java.version>21</java.version>
        <spring-framework.version>6.1.3</spring-framework.version>
        <rest-assured.version>5.4.0</rest-assured.version>
        <wiremock.version>3.4.0</wiremock.version>
        <h2.version>2.2.224</h2.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.rest-assured</groupId>
                <artifactId>rest-assured</artifactId>
                <version>${rest-assured.version}</version>
            </dependency>
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>${h2.version}</version>
            </dependency>
            <!-- Using standalone due to Jetty incompatibility (https://github.com/wiremock/wiremock/issues/2395) -->
            <dependency>
                <groupId>org.wiremock</groupId>
                <artifactId>wiremock-standalone</artifactId>
                <version>${wiremock.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>
                        <!-- Needed when using Mockito on JDK 21, see https://openjdk.org/jeps/451 -->
                        -XX:+EnableDynamicAgentLoading
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
